--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -42,16 +42,6 @@ h1 {
 	font-size: 35px;
 }
 
-a {
-	text-decoration: none;
-	color: var(--accent1);
-}
-
-div {
-	display: flex;
-	align-items: center;
-}
-
 header, footer {
 	padding: 20px;
 	display: flex;
@@ -59,6 +49,38 @@ header, footer {
 	justify-content: space-between;
 	color: var(--white);
 	background-color: var(--accent1);
+}
+
+nav {
+	display: flex;
+	align-items: center;
+}
+
+main {
+	padding: 20px;
+	display: flex;
+}
+
+section {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+a {
+	text-decoration: none;
+	color: var(--accent1);
+}
+
+nav a {
+	margin: 0px 5px;
+	text-decoration: none;
+	color: var(--white);
+}
+
+div {
+	display: flex;
+	align-items: center;
 }
 
 input {
@@ -70,39 +92,27 @@ input {
 	background-color: unset;
 }
 
-main {
-	padding: 20px;
-	display: flex;
-}
-
-nav {
-	display: flex;
-	align-items: center;
-}
-
-nav a {
-	margin: 0px 5px;
-	text-decoration: none;
-	color: var(--white);
-}
-
-section {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
+.logo img {
+	margin-right: 10px;
+	height: 30px;
 }
 
 .button {
 	padding: 10px;
 	border: solid 3px var(--accent2);
+	border-radius: 10px;
 	color: var(--white);
 	background-color: var(--accent2);
-	border-radius: 10px;
 }
 
-.logo img {
-	margin-right: 10px;
-	height: 30px;
+a:hover {
+	color: var(--accent2);
+}
+
+.button:hover {
+	border: solid 3px var(--white);
+	color: var(--white);
+	background-color: var(--daccent2);
 }
 
 input:focus-visible {
@@ -119,24 +129,14 @@ input:focus-visible::placeholder {
 	color: var(--black);
 }
 
-a:hover {
-	color: var(--accent2);
-}
-
-.button:hover {
-	border: solid 3px var(--white);
-	color: var(--white);
-	background-color: var(--daccent2);
-}
-
 #topsection {
 	min-height: 90vh;
 	justify-content: center;
 	align-items: center;
 	background-image: url("../content/historicfigures/venus_birth.jpg");
-	background-position: center;
+	background-position: center -50px;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: auto;
 }
 
 #topsection div {
@@ -173,8 +173,7 @@ a:hover {
 	
 	#topsection h3 {
 		margin-bottom: 10px;
-		text-align: center;
-		font-size: revert;
+		width: unset;
 		color: var(--white);
 	}
 }
@@ -194,13 +193,13 @@ a:hover {
 }
 
 @font-face {
-	font-family: "Work Sans";
 	font-weight: 400;
+	font-family: "Work Sans";
 	src: url("https://fonts.gstatic.com/s/worksans/v18/QGYsz_wNahGAdqQ43Rh_fKDp.woff2");
 }
 
 @font-face {
-	font-family: "Work Sans Bold";
 	font-weight: 600;
+	font-family: "Work Sans Bold";
 	src: url("https://fonts.gstatic.com/s/worksans/v18/QGYsz_wNahGAdqQ43Rh_fKDp.woff2");
 }
