--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -136,7 +136,7 @@ input:focus-visible::placeholder {
 	background-image: url("../content/historicfigures/venus_birth.jpg");
 	background-position: center -50px;
 	background-repeat: no-repeat;
-	background-size: auto;
+	background-size: cover;
 }
 
 #topsection div {
@@ -174,6 +174,7 @@ input:focus-visible::placeholder {
 	#topsection h3 {
 		margin-bottom: 10px;
 		width: unset;
+		font-size: 40px;
 		color: var(--white);
 	}
 }
