--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -171,6 +171,10 @@ input:focus-visible::placeholder {
 		width: 100%;
 	}
 	
+	#topsection {
+		background-size: unset;
+	}
+	
 	#topsection h3 {
 		margin-bottom: 10px;
 		width: unset;
