--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -92,6 +92,13 @@ input {
 	background-color: unset;
 }
 
+.usp {
+	padding: 2px;
+	justify-content: space-evenly;
+	color: var(--white);
+	background-color: var(--black);
+}
+
 .logo img {
 	margin-right: 10px;
 	height: 30px;
