--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -13,9 +13,9 @@ html {
 	--black: rgb(0 0 0);
 	--accent1: rgb(0 0 200);
 	--daccent1: rgb(0 0 150);
-	--accent2: rgb(200 0 250);
-	--daccent2: rgb(150 0 200);
-	--accent3: rgb(0 250 100);
+	--accent2: rgb(175 0 150);
+	--daccent2: rgb(125 0 100);
+	--accent3: rgb(250 200 0);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -93,10 +93,10 @@ input {
 }
 
 .usp {
-	padding: 2px;
+	padding: 5px;
 	justify-content: space-evenly;
 	color: var(--white);
-	background-color: var(--black);
+	background-color: var(--accent2);
 }
 
 .logo img {
