--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -182,13 +182,8 @@ input:focus-visible::placeholder {
 		display: none;
 	}
 	
-	#topsection {
-		background-size: unset;
-	}
-	
 	#topsection h3 {
 		margin-bottom: 10px;
-		width: unset;
 		font-size: 40px;
 		color: var(--white);
 	}
@@ -204,6 +199,14 @@ input:focus-visible::placeholder {
 	}
 	
 	.logo {
+		width: unset;
+	}
+	
+	#topsection {
+		min-height: 50vh;
+	}
+	
+	#topsection div {
 		width: unset;
 	}
 }
