--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -4,7 +4,7 @@
 	margin: 0px;
 	padding: 0px;
 	font-size: 15px; 
-	font-family: "Epilogue", sans-serif;
+	font-family: "Work Sans", sans-serif;
 }
 
 html {
@@ -20,8 +20,8 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Epilogue", sans-serif;
-	font-width: bold;
+	font-family: "Work Sans", sans-serif;
+	font-weight: 600;
 }
 
 h6 {
@@ -138,29 +138,6 @@ input:focus-visible::placeholder {
 	color: var(--black);
 }
 
-#topsection {
-	min-height: 90vh;
-	justify-content: center;
-	align-items: center;
-	background-image: url("../content/historicfigures/venus_birth.jpg");
-	background-position: center -50px;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-#topsection div {
-	padding: 20px;
-	width: 60%;
-	flex-direction: column;
-}
-
-#topsection h3 {
-	margin-bottom: 10px;
-	text-align: center;
-	font-size: 70px;
-	color: var(--white);
-}
-
 @media screen and (max-width: 900px) {
 	header {
 		flex-direction: column;
@@ -183,12 +160,6 @@ input:focus-visible::placeholder {
 	.usp {
 		display: none;
 	}
-	
-	#topsection h3 {
-		margin-bottom: 10px;
-		font-size: 40px;
-		color: var(--white);
-	}
 }
 
 @media screen and (max-width: 600px) {
@@ -203,13 +174,6 @@ input:focus-visible::placeholder {
 	.logo {
 		width: unset;
 	}
-	
-	#topsection {
-		min-height: 50vh;
-	}
-	
-	#topsection div {
-		width: unset;
-	}
 }
-@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&family=Newsreader:opsz,wght@6..72,400;6..72,700");
+
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans");
